// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ColorPicker Should disabled work 1`] = `
<div>
  <div
    class="g-color-picker-trigger css-var-root g-color-picker-css-var g-color-picker-trigger-disabled"
  >
    <div
      class="g-color-picker-clear"
    />
  </div>
</div>
`;

exports[`ColorPicker Should panelRender work 1`] = `
<div>
  <div
    aria-describedby="test-id"
    class="g-color-picker-trigger css-var-root g-color-picker-css-var g-popover-open g-color-picker-trigger-active"
  >
    <div
      class="g-color-picker-clear"
    />
  </div>
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-root css-var-root g-color-picker css-var-root g-color-picker-css-var g-popover-placement-bottomLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute;"
    >
      <span
        class="g-popover-arrow-content"
      />
    </div>
    <div
      class="g-popover-container"
      id="test-id"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-color-picker-inner"
        >
          <div
            class="custom-panel"
          >
            <div
              class="g-color-picker-inner-content"
            >
              <div
                class="g-color-picker-panel"
              >
                <div
                  class="g-color-picker-select"
                >
                  <div
                    class="g-color-picker-palette"
                    style="position: relative;"
                  >
                    <div
                      style="position: absolute; left: 0%; top: 100%; z-index: 1; transform: translate(-50%, -50%);"
                    >
                      <div
                        class="g-color-picker-handler"
                        style="background-color: rgba(0, 0, 0, 0);"
                      />
                    </div>
                    <div
                      class="g-color-picker-saturation"
                      style="background-color: rgb(255, 0, 0); background-image: linear-gradient(0deg, #000, transparent), linear-gradient(90deg, #fff, hsla(0, 0%, 100%, 0));"
                    />
                  </div>
                </div>
                <div
                  class="g-color-picker-slider-container"
                >
                  <div
                    class="g-color-picker-slider-group"
                  >
                    <div
                      class="g-slider g-color-picker-slider css-var-root g-slider-horizontal"
                    >
                      <div
                        class="g-slider-rail g-color-picker-slider-rail"
                        style="background: linear-gradient(90deg, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
                      />
                      <div
                        class="g-slider-step"
                      />
                      <div
                        aria-disabled="false"
                        aria-orientation="horizontal"
                        aria-valuemax="359"
                        aria-valuemin="0"
                        aria-valuenow="0"
                        class="g-slider-handle g-slider-handle-1 g-color-picker-slider-handle"
                        role="slider"
                        style="left: 0%; transform: translateX(-50%); background: rgb(255, 0, 0);"
                        tabindex="0"
                      />
                    </div>
                    <div
                      class="g-slider g-color-picker-slider css-var-root g-slider-horizontal"
                    >
                      <div
                        class="g-slider-rail g-color-picker-slider-rail"
                        style="background: linear-gradient(90deg, rgba(255, 0, 4, 0) 0%, rgb(0,0,0) 100%);"
                      />
                      <div
                        class="g-slider-step"
                      />
                      <div
                        aria-disabled="false"
                        aria-orientation="horizontal"
                        aria-valuemax="100"
                        aria-valuemin="0"
                        aria-valuenow="0"
                        class="g-slider-handle g-slider-handle-1 g-color-picker-slider-handle"
                        role="slider"
                        style="left: 0%; transform: translateX(-50%); background: rgba(0, 0, 0, 0);"
                        tabindex="0"
                      />
                    </div>
                  </div>
                  <div
                    class="g-color-picker-color-block"
                  >
                    <div
                      class="g-color-picker-color-block-inner"
                      style="background: rgba(0, 0, 0, 0);"
                    />
                  </div>
                </div>
              </div>
              <div
                class="g-color-picker-input-container"
              >
                <div
                  class="g-select g-select-sm g-select-borderless g-color-picker-format-select css-var-root g-select-css-var g-select-single g-select-show-arrow"
                >
                  <div
                    class="g-select-content g-select-content-has-value"
                    title="HEX"
                  >
                    HEX
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="g-select-input"
                      id="test-id"
                      readonly=""
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </div>
                  <div
                    class="g-select-suffix"
                  >
                    <span
                      aria-label="down"
                      class="gicon gicon-down"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="g-color-picker-input"
                >
                  <span
                    class="g-input-affix-wrapper g-input-affix-wrapper-sm g-input-outlined g-color-picker-hex-input css-var-root g-input-css-var"
                  >
                    <span
                      class="g-input-prefix"
                    >
                      #
                    </span>
                    <input
                      class="g-input g-input-sm"
                      type="text"
                      value="000000"
                    />
                  </span>
                </div>
                <div
                  class="g-input-number g-input-number-mode-input css-var-root g-input-number-css-var g-color-picker-steppers g-color-picker-alpha-input g-input-number-outlined g-input-number-sm"
                >
                  <input
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    autocomplete="off"
                    class="g-input-number-input"
                    role="spinbutton"
                    step="1"
                    value="0%"
                  />
                  <div
                    class="g-input-number-actions"
                  >
                    <span
                      aria-disabled="false"
                      aria-label="Increase Value"
                      class="g-input-number-action g-input-number-action-up"
                      role="button"
                      unselectable="on"
                    >
                      <span
                        aria-label="up"
                        class="gicon gicon-up"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="up"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      aria-disabled="true"
                      aria-label="Decrease Value"
                      class="g-input-number-action g-input-number-action-down g-input-number-action-down-disabled"
                      role="button"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="gicon gicon-down"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker Should panelRender work 2`] = `
<div>
  <div
    aria-describedby="test-id"
    class="g-color-picker-trigger css-var-root g-color-picker-css-var g-popover-open g-color-picker-trigger-active"
  >
    <div
      class="g-color-picker-clear"
    />
  </div>
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-root css-var-root g-color-picker css-var-root g-color-picker-css-var g-popover-placement-bottomLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute;"
    >
      <span
        class="g-popover-arrow-content"
      />
    </div>
    <div
      class="g-popover-container"
      id="test-id"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-color-picker-inner"
        >
          <div
            class="custom-panel"
          >
            <div
              class="g-color-picker-panel"
            >
              <div
                class="g-color-picker-select"
              >
                <div
                  class="g-color-picker-palette"
                  style="position: relative;"
                >
                  <div
                    style="position: absolute; left: 0%; top: 100%; z-index: 1; transform: translate(-50%, -50%);"
                  >
                    <div
                      class="g-color-picker-handler"
                      style="background-color: rgba(0, 0, 0, 0);"
                    />
                  </div>
                  <div
                    class="g-color-picker-saturation"
                    style="background-color: rgb(255, 0, 0); background-image: linear-gradient(0deg, #000, transparent), linear-gradient(90deg, #fff, hsla(0, 0%, 100%, 0));"
                  />
                </div>
              </div>
              <div
                class="g-color-picker-slider-container"
              >
                <div
                  class="g-color-picker-slider-group"
                >
                  <div
                    class="g-slider g-color-picker-slider css-var-root g-slider-horizontal"
                  >
                    <div
                      class="g-slider-rail g-color-picker-slider-rail"
                      style="background: linear-gradient(90deg, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
                    />
                    <div
                      class="g-slider-step"
                    />
                    <div
                      aria-disabled="false"
                      aria-orientation="horizontal"
                      aria-valuemax="359"
                      aria-valuemin="0"
                      aria-valuenow="0"
                      class="g-slider-handle g-slider-handle-1 g-color-picker-slider-handle"
                      role="slider"
                      style="left: 0%; transform: translateX(-50%); background: rgb(255, 0, 0);"
                      tabindex="0"
                    />
                  </div>
                  <div
                    class="g-slider g-color-picker-slider css-var-root g-slider-horizontal"
                  >
                    <div
                      class="g-slider-rail g-color-picker-slider-rail"
                      style="background: linear-gradient(90deg, rgba(255, 0, 4, 0) 0%, rgb(0,0,0) 100%);"
                    />
                    <div
                      class="g-slider-step"
                    />
                    <div
                      aria-disabled="false"
                      aria-orientation="horizontal"
                      aria-valuemax="100"
                      aria-valuemin="0"
                      aria-valuenow="0"
                      class="g-slider-handle g-slider-handle-1 g-color-picker-slider-handle"
                      role="slider"
                      style="left: 0%; transform: translateX(-50%); background: rgba(0, 0, 0, 0);"
                      tabindex="0"
                    />
                  </div>
                </div>
                <div
                  class="g-color-picker-color-block"
                >
                  <div
                    class="g-color-picker-color-block-inner"
                    style="background: rgba(0, 0, 0, 0);"
                  />
                </div>
              </div>
            </div>
            <div
              class="g-color-picker-input-container"
            >
              <div
                class="g-select g-select-sm g-select-borderless g-color-picker-format-select css-var-root g-select-css-var g-select-single g-select-show-arrow"
              >
                <div
                  class="g-select-content g-select-content-has-value"
                  title="HEX"
                >
                  HEX
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="off"
                    class="g-select-input"
                    id="test-id"
                    readonly=""
                    role="combobox"
                    type="search"
                    value=""
                  />
                </div>
                <div
                  class="g-select-suffix"
                >
                  <span
                    aria-label="down"
                    class="gicon gicon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="g-color-picker-input"
              >
                <span
                  class="g-input-affix-wrapper g-input-affix-wrapper-sm g-input-outlined g-color-picker-hex-input css-var-root g-input-css-var"
                >
                  <span
                    class="g-input-prefix"
                  >
                    #
                  </span>
                  <input
                    class="g-input g-input-sm"
                    type="text"
                    value="000000"
                  />
                </span>
              </div>
              <div
                class="g-input-number g-input-number-mode-input css-var-root g-input-number-css-var g-color-picker-steppers g-color-picker-alpha-input g-input-number-outlined g-input-number-sm"
              >
                <input
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="0"
                  autocomplete="off"
                  class="g-input-number-input"
                  role="spinbutton"
                  step="1"
                  value="0%"
                />
                <div
                  class="g-input-number-actions"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="g-input-number-action g-input-number-action-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="up"
                      class="gicon gicon-up"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-disabled="true"
                    aria-label="Decrease Value"
                    class="g-input-number-action g-input-number-action-down g-input-number-action-down-disabled"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="gicon gicon-down"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker Should render trigger work 1`] = `
<div>
  <div
    class="trigger"
  />
</div>
`;

exports[`ColorPicker rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="g-color-picker-trigger css-var-root g-color-picker-css-var g-color-picker-rtl"
>
  <div
    class="g-color-picker-clear"
  />
</div>
`;
